ui-ux: Fix responsive spacing/clip-path issues with 'Blog' section

--- a/css/main.scss
+++ b/css/main.scss
@@ -114,8 +114,6 @@ section {
  }
 
 
-
-
 .clients {
     padding: 4rem 0;
     .clients-list {
@@ -177,19 +175,19 @@ section {
         justify-content: center;
 
         article {
-            width: 90%;
+            width: 100%;
 
             .inner {
                 position: relative;
-                margin: 1rem;
+                margin: 0 0 1rem;
                 padding-bottom: 0.5rem;
                 background: #fff;
 
                 .thumbnail {
                     img {
                         width: 100%;
-                        height: 200px;
-                        clip-path: polygon(50% 0, 100% 55%, 100% 100%, 0 100%, 0 0);
+                        height: 300px;
+                        clip-path: polygon(65% 0, 100% 40%, 100% 100%, 0 100%, 0 0);
                     }
 
                     &:hover img {
@@ -267,9 +265,20 @@ section {
             }
         }
         
-        @media (min-width: 600px) {
+        @media (min-width: 450px) {
             article {
                 width: 50%;
+
+                .inner {
+                    margin: 1rem;
+
+                    .thumbnail {
+                        img {
+                            height: 200px;
+                            clip-path: polygon(50% 0, 100% 55%, 100% 100%, 0 100%, 0 0);
+                        }
+                    }
+                }
             }
         }
 
@@ -281,9 +290,12 @@ section {
 
         @media (min-width: 1200px) {
             article {
-                .inner .thumbnail img {
-                    clip-path: polygon(66% 0, 100% 48%, 100% 100%, 0 100%, 0 0);
-                }
+                .inner .thumbnail {
+                    img {
+                        height: 250px;
+                        clip-path: polygon(66% 0, 100% 48%, 100% 100%, 0 100%, 0 0);
+                    }
+                }    
             }
         }
 
